[gd_scene load_steps=31 format=1]

[ext_resource path="res://Levels/tutorial.gd" type="Script" id=1]
[ext_resource path="res://Tiles/can_place_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Tiles/ground_tiles.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/player.gd" type="Script" id=4]
[ext_resource path="res://GUI/gui.tscn" type="PackedScene" id=5]
[ext_resource path="res://Audio/error.wav" type="Sample" id=6]
[ext_resource path="res://Audio/error_01.wav" type="Sample" id=7]
[ext_resource path="res://Audio/hit_base.wav" type="Sample" id=8]
[ext_resource path="res://Audio/place_01.wav" type="Sample" id=9]
[ext_resource path="res://Audio/place_02.wav" type="Sample" id=10]
[ext_resource path="res://Audio/place_03.wav" type="Sample" id=11]
[ext_resource path="res://Audio/place_04.wav" type="Sample" id=12]
[ext_resource path="res://Audio/remove_01.wav" type="Sample" id=13]
[ext_resource path="res://Audio/remove_02.wav" type="Sample" id=14]
[ext_resource path="res://Audio/remove_03.wav" type="Sample" id=15]
[ext_resource path="res://Audio/remove_04.wav" type="Sample" id=16]
[ext_resource path="res://Audio/typing.wav" type="Sample" id=17]
[ext_resource path="res://Audio/upgrade.wav" type="Sample" id=18]
[ext_resource path="res://Music/tut_loop.ogg" type="AudioStream" id=19]
[ext_resource path="res://Scripts/camrea.gd" type="Script" id=20]
[ext_resource path="res://Menus/pause_menu.tscn" type="PackedScene" id=21]
[ext_resource path="res://Menus/game_over.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scripts/typing.gd" type="Script" id=23]
[ext_resource path="res://Fonts/nasalization-rg.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://arrow.png" type="Texture" id=25]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, -64, 272, 0, 0, 0, 0, 0, 272, 0, 0, 0, 0, 176, 272, 0, 0, 0, 0, 224, 272, 0, 0, 0, 0, 272, 272, 0, 0, 0, 0, 320, 272, 0, 0, 0, 0, 352, 272, 0, 0, 0, 0, 384, 272, 0, 0, 0, 0, 432, 272, 0, 0, 0, 0, 464, 272, 0, 0, 0, 0, 544, 272, 0, 0, 0, 0, 672, 272, 0, 0, 0, 0, 864, 272 )
}

[sub_resource type="SampleLibrary" id=2]

samples/error = {
"db": -10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/error_01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/hit_base = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/place_01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}
samples/place_02 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 10 )
}
samples/place_03 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}
samples/place_04 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 12 )
}
samples/remove_01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/remove_02 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}
samples/remove_03 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 15 )
}
samples/remove_04 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}
samples/typing = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/typing_1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/typing_2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/upgrade = {
"db": -10.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 18 )
}

[sub_resource type="DynamicFont" id=3]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 24 )

[sub_resource type="CanvasItemShader" id=4]

_code = {
"fragment": "if (COLOR.a > 0) {
COLOR = color(COLOR.rgb, 1*mod(TIME, 2));
}",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=5]

shader/shader = SubResource( 4 )
shader/shading_mode = 0

[node name="tutorial" type="Node2D"]

script/script = ExtResource( 1 )

[node name="can_place" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 589822, 0, 589823, 0, 524288, 0, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 0, 524307, 0, 524308, 0, 524309, 0, 524310, 0, 524311, 0, 524312, 0, 524313, 0, 524314, 0, 983043, 0, 983044, 0, 983045, 0, 1048576, 0, 1048577, 0, 1048578, 0, 1048579, 0, 1048580, 0, 1048581, 0, 1048582, 0, 1048583, 0, 1048584, 0, 1048585, 0, 1048586, 0, 1048587, 0, 1048588, 0, 1048589, 0, 1048590, 0, 1048591, 0, 1048592, 0, 1048593, 0, 1048594, 0, 1048595, 0, 1048596, 0, 1048597, 0, 1048598, 0, 1048599, 0, 1048600, 0, 1114112, 0, 1114113, 0, 1114114, 0, 1114115, 0, 1114116, 0, 1114117, 0, 1114118, 0, 1114119, 0, 1114120, 0, 1114121, 0, 1114122, 0, 1114123, 0, 1114124, 0, 1114125, 0, 1114126, 0, 1114127, 0, 1114128, 0, 1114129, 0, 1114130, 0, 1114131, 0, 1114132, 0, 1114133, 0, 1114134, 0, 1114135, 0, 1114136, 0, 1179648, 0, 1179649, 0, 1179650, 0, 1179651, 0, 1179652, 0, 1179653, 0, 1179654, 0, 1179655, 0, 1179656, 0, 1179657, 0, 1179658, 0, 1179659, 0, 1179660, 0, 1179661, 0, 1179662, 0, 1179663, 0, 1179664, 0, 1179665, 0, 1179666, 0, 1179667, 0, 1179668, 0, 1179669, 0, 1179670, 0, 1179671, 0, 1179672, 0 )

[node name="ground" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 23, 0, 24, 0, 65536, 0, 65537, 0, 65538, 0, 65539, 0, 65540, 0, 65541, 0, 65542, 0, 65543, 0, 65544, 0, 65545, 0, 65546, 0, 65547, 0, 65548, 0, 65549, 0, 65550, 0, 65551, 0, 65552, 0, 65553, 0, 65554, 0, 65555, 0, 65556, 0, 65557, 0, 65558, 0, 65559, 0, 65560, 0, 131072, 0, 131073, 0, 131074, 0, 131075, 0, 131076, 0, 131077, 0, 131078, 0, 131079, 0, 131080, 0, 131081, 0, 131082, 0, 131083, 0, 131084, 0, 131085, 0, 131086, 0, 131087, 0, 131088, 0, 131089, 0, 131090, 0, 131091, 0, 131092, 0, 131093, 0, 131094, 0, 131095, 0, 131096, 0, 196608, 0, 196609, 0, 196610, 0, 196611, 0, 196612, 0, 196613, 0, 196614, 0, 196615, 0, 196616, 0, 196617, 0, 196618, 0, 196619, 0, 196620, 0, 196621, 0, 196622, 0, 196623, 0, 196624, 0, 196625, 0, 196626, 0, 196627, 0, 196628, 0, 196629, 0, 196630, 0, 196631, 0, 196632, 0, 262144, 0, 262145, 0, 262146, 0, 262147, 0, 262148, 0, 262149, 0, 262150, 0, 262151, 0, 262152, 0, 262153, 0, 262154, 0, 262155, 0, 262156, 0, 262157, 0, 262158, 0, 262159, 0, 262160, 0, 262161, 0, 262162, 0, 262163, 0, 262164, 0, 262165, 0, 262166, 0, 262167, 0, 262168, 0, 327680, 0, 327681, 0, 327682, 0, 327683, 0, 327684, 0, 327685, 0, 327686, 0, 327687, 0, 327688, 0, 327689, 0, 327690, 0, 327691, 0, 327692, 0, 327693, 0, 327694, 0, 327695, 0, 327696, 0, 327697, 0, 327698, 0, 327699, 0, 327700, 0, 327701, 0, 327702, 0, 327703, 0, 327704, 0, 393216, 0, 393217, 0, 393218, 0, 393219, 0, 393220, 0, 393221, 0, 393222, 0, 393223, 0, 393224, 0, 393225, 0, 393226, 0, 393227, 0, 393228, 0, 393229, 0, 393230, 0, 393231, 0, 393232, 0, 393233, 0, 393234, 0, 393235, 0, 393236, 0, 393237, 0, 393238, 0, 393239, 0, 393240, 0, 458752, 1, 458753, 1, 458754, 1, 458755, 1, 458756, 1, 458757, 1, 458758, 1, 458759, 1, 458760, 1, 458761, 1, 458762, 1, 458763, 1, 458764, 1, 458765, 1, 458766, 1, 458767, 1, 458768, 1, 458769, 1, 458770, 1, 458771, 1, 458772, 1, 458773, 1, 458774, 1, 458775, 1, 458776, 1, 589822, 5, 589823, 5, 524288, 5, 524289, 5, 524290, 5, 524291, 5, 524292, 5, 524293, 5, 524294, 5, 524295, 5, 524296, 5, 524297, 5, 524298, 5, 524299, 5, 524300, 5, 524301, 5, 524302, 5, 524303, 5, 524304, 5, 524305, 5, 524306, 5, 524307, 5, 524308, 5, 524309, 5, 524310, 5, 524311, 5, 524312, 5, 524313, 5, 524314, 5, 589824, 0, 589825, 0, 589826, 0, 589827, 0, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 589832, 0, 589833, 0, 589834, 0, 589835, 0, 589836, 0, 589837, 0, 589838, 0, 589839, 0, 589840, 0, 589841, 0, 589842, 0, 589843, 0, 589844, 0, 589845, 0, 589846, 0, 589847, 0, 589848, 0, 655360, 0, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655371, 0, 655372, 0, 655373, 0, 655374, 0, 655375, 0, 655376, 0, 655377, 0, 655378, 0, 655379, 0, 655380, 0, 655381, 0, 655382, 0, 655383, 0, 655384, 0, 720896, 0, 720897, 0, 720898, 0, 720899, 0, 720900, 0, 720901, 0, 720902, 0, 720903, 0, 720904, 0, 720905, 0, 720906, 0, 720907, 0, 720908, 0, 720909, 0, 720910, 0, 720911, 0, 720912, 0, 720913, 0, 720914, 0, 720915, 0, 720916, 0, 720917, 0, 720918, 0, 720919, 0, 720920, 0, 786432, 0, 786433, 0, 786434, 0, 786435, 0, 786436, 0, 786437, 0, 786438, 0, 786439, 0, 786440, 0, 786441, 0, 786442, 0, 786443, 0, 786444, 0, 786445, 0, 786446, 0, 786447, 0, 786448, 0, 786449, 0, 786450, 0, 786451, 0, 786452, 0, 786453, 0, 786454, 0, 786455, 0, 786456, 0, 851968, 0, 851969, 0, 851970, 0, 851971, 0, 851972, 0, 851973, 0, 851974, 0, 851975, 0, 851976, 0, 851977, 0, 851978, 0, 851979, 0, 851980, 0, 851981, 0, 851982, 0, 851983, 0, 851984, 0, 851985, 0, 851986, 0, 851987, 0, 851988, 0, 851989, 0, 851990, 0, 851991, 0, 851992, 0, 917504, 0, 917505, 0, 917506, 0, 917507, 0, 917508, 0, 917509, 0, 917510, 0, 917511, 0, 917512, 0, 917513, 0, 917514, 0, 917515, 0, 917516, 0, 917517, 0, 917518, 0, 917519, 0, 917520, 0, 917521, 0, 917522, 0, 917523, 0, 917524, 0, 917525, 0, 917526, 0, 917527, 0, 917528, 0, 983040, 0, 983041, 0, 983042, 0, 983043, 0, 983044, 0, 983045, 0, 983046, 0, 983047, 0, 983048, 0, 983049, 0, 983050, 0, 983051, 0, 983052, 0, 983053, 0, 983054, 0, 983055, 0, 983056, 0, 983057, 0, 983058, 0, 983059, 0, 983060, 0, 983061, 0, 983062, 0, 983063, 0, 983064, 0 )

[node name="path" type="Path2D" parent="."]

curve = SubResource( 1 )

[node name="towers" type="Node2D" parent="."]

[node name="player" type="Node2D" parent="."]

script/script = ExtResource( 4 )

[node name="gui" parent="." instance=ExtResource( 5 )]

[node name="energy_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 60.0
one_shot = false
autostart = true

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 10
config/samples = SubResource( 2 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 19 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 400, 300 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 20 )

[node name="pause_menu" parent="." instance=ExtResource( 21 )]

transform/pos = Vector2( -999, -999 )

[node name="game_over" parent="." instance=ExtResource( 22 )]

transform/pos = Vector2( -999, -999 )

[node name="tut_text" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 16.0
margin/right = 784.0
margin/bottom = 112.0
script/script = ExtResource( 23 )

[node name="RichTextLabel" type="RichTextLabel" parent="tut_text"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 736.0
margin/bottom = 96.0
custom_fonts/normal_font = SubResource( 3 )
bbcode/enabled = true
bbcode/bbcode = "
"
visible_characters = 0

[node name="Button" type="Button" parent="tut_text"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 708.0
margin/top = 61.0
margin/right = 752.0
margin/bottom = 81.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Next"
flat = false

[node name="Timer" type="Timer" parent="tut_text"]

process_mode = 1
wait_time = 0.03
one_shot = false
autostart = false

[node name="health_arrow" type="Sprite" parent="."]

visibility/visible = false
material/material = SubResource( 5 )
transform/pos = Vector2( 560, 448 )
transform/scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 25 )

[node name="power_arrow" type="Sprite" parent="."]

visibility/visible = false
material/material = SubResource( 5 )
transform/pos = Vector2( 37, 480 )
transform/scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 25 )

[node name="tower_arrow" type="Sprite" parent="."]

visibility/visible = false
material/material = SubResource( 5 )
transform/pos = Vector2( 284, 480 )
transform/scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 25 )

[node name="solar_arrow" type="Sprite" parent="."]

visibility/visible = false
material/material = SubResource( 5 )
transform/pos = Vector2( 252, 496 )
transform/scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 25 )

[node name="stats_arrow" type="Sprite" parent="."]

visibility/visible = false
material/material = SubResource( 5 )
transform/pos = Vector2( 128, 448 )
transform/scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 25 )

[node name="remove_arrow" type="Sprite" parent="."]

visibility/visible = false
material/material = SubResource( 5 )
transform/pos = Vector2( 763, 487 )
transform/scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 25 )


